test/Fail/Issue2018debug.err
checking section Issue2018debug {A : Set}
adding section: Issue2018debug 1
    actual tele: {A : Set}
checking section M {A = A₁ : Set}
adding section: M 1
    actual tele: {A : Set} {A = A₁ : Set}
Issue2018debug.agda:14.8-11: error: [UnequalTypes]
The types
  Set₁
and
  Set
are not equal
when checking that the expression Set has type Set
